fix long strings overflow in variant options

--- a/imports/plugins/included/default-theme/client/styles/products/childVariant.less
+++ b/imports/plugins/included/default-theme/client/styles/products/childVariant.less
@@ -22,8 +22,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  max-width: 25%;
-  width: 25%;
+  width: auto;
   padding: 10px;
 
   @media only screen and (max-width: @screen-xs-max) {
